--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-    
+        <h2 class="title-poem">
+        Nic dwa razy
+        </h2>
+        <p class="author"> 
+        Wisława Szymborska 
+        </p>
+        
+        <p class="poem">
+        Nic dwa razy się nie zda­rza <br>
+        i nie zda­rzy. Z tej przy­czy­ny <br>
+        zro­dzi­li­śmy się bez wpra­wy <br>
+        i po­mrze­my bez ru­ty­ny. <br>
+
+        Choć­by­śmy ucznia­mi byli <br>
+        naj­tęp­szy­mi w szko­le świa­ta, <br>
+        nie bę­dzie­my re­pe­to­wać <br>
+        żad­nej zimy ani lata. <br>
+
+        Żaden dzień się nie po­wtó­rzy, <br>
+        nie ma dwóch po­dob­nych nocy, <br>
+        dwóch tych sa­mych po­ca­łun­ków, <br>
+        dwóch jed­na­kich spoj­rzeń w oczy. <br>
+        </p>
     </body>
