--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html LANG ="pl">
     <head>
         <meta charset="utf-8">
-        <title> Poem </title>
+        <title> Nic dwa razy</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
