--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h2 class="title-poem">
         Nic dwa razy
         </h2>
-        <p class="author"> 
+        <p class="author-poem"> 
         Wisława Szymborska 
         </p>
         
